// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipEntity #openTooltip 1`] = `
<a
  className="TooltipEntity"
  data-draftail-trigger={true}
  href="https://www.example.com/"
  onMouseUp={[Function]}
  role="button"
>
  <Icon
    className="TooltipEntity__icon"
    icon="#icon-test"
  />
  test
  <Tooltip
    content={
      <div
        className="Draftail-InlineToolbar"
        role="toolbar"
      >
        <a
          className="Tooltip__link"
          href="https://www.example.com/"
          rel="noreferrer"
          target="_blank"
          title="https://www.example.com/"
        >
          www.example.com
        </a>
        <button
          className="button Tooltip__button"
          onClick={[Function]}
          type="button"
        >
          Edit
        </button>
        <button
          className="button button-secondary no Tooltip__button"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
      </div>
    }
    getTargetPosition={[Function]}
    onHide={[Function]}
    shouldOpen={true}
  />
</a>
`;

exports[`TooltipEntity works 1`] = `
<a
  className="TooltipEntity"
  data-draftail-trigger={true}
  href="https://www.example.com/"
  onMouseUp={[Function]}
  role="button"
>
  <Icon
    className="TooltipEntity__icon"
    icon="#icon-test"
  />
  test
  <Tooltip
    content={
      <div
        className="Draftail-InlineToolbar"
        role="toolbar"
      >
        <a
          className="Tooltip__link"
          href="https://www.example.com/"
          rel="noreferrer"
          target="_blank"
          title="https://www.example.com/"
        >
          www.example.com
        </a>
        <button
          className="button Tooltip__button"
          onClick={[Function]}
          type="button"
        >
          Edit
        </button>
        <button
          className="button button-secondary no Tooltip__button"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
      </div>
    }
    getTargetPosition={[Function]}
    onHide={[Function]}
    shouldOpen={false}
  />
</a>
`;
